refactor(promocodes): доработка промокодов
